--- a/index.html
+++ b/index.html
@@ -25,8 +25,8 @@
     <header>
 
         <!-- Navigation Menu Start  -->
-        <nav class="navbar navbar-expand-lg navbar-light bg-light my-3 fixed-top">
-            <div class="container">
+        <nav class="navbar navbar-expand-lg navbar-light bg-light fixed-top">
+            <div class="container mx-auto m-3">
               <a class="navbar-brand" href="#"><img src="images/logo.png" alt="" class="d-inline-block align-text-top"></a>
               <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
                 <span class="navbar-toggler-icon"></span>
@@ -62,7 +62,7 @@
                 </div>
                 <div class="carousel-inner rounded-3">
                   <div class="carousel-item active">
-                    <div class="row panda-background d-flex align-items-center p-4">
+                    <div class="row panda-background d-flex align-items-center p-5">
                         <div class="col-lg-7">                         
                             <h1 class="fw-bold">Cool Dude Headphone</h1>
                             <p>This is the best headphone in the world for people who just want to waste time in front of funky world.</p>
@@ -76,7 +76,7 @@
                     </div>
                   </div>
                   <div class="carousel-item">
-                    <div class="row panda-background d-flex align-items-center p-4">
+                    <div class="row panda-background d-flex align-items-center p-5">
                         <div class="col-lg-7">                         
                             <h1 class="fw-bold">X-Box for your living room</h1>
                             <p>This is the best x-box in the world for people who just want to waste time in front of fake sports.<p>
@@ -90,7 +90,7 @@
                     </div>
                   </div>
                   <div class="carousel-item">
-                    <div class="row panda-background d-flex align-items-center p-4">
+                    <div class="row panda-background d-flex align-items-center p-5">
                         <div class="col-lg-7">                         
                             <h1 class="fw-bold">Mega LCD TV For Sports</h1>
                             <p>This is the best tv in the world for people who just want to waste time in front of tv.<p>
